src/objects/Letter_Head__c.object
<CustomObject>
    <description>country and brand specifics for conga communications (and others?)</description>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country specific letter head for brand
matched to country field on other objects</description>
        <externalId>true</externalId>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_ID__c</fullName>
        <description>ID of this header (is unique?)</description>
        <label>Header ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Language of Letter Head
(should be a picklist to match local comment code values?)</description>
        <label>Language</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Letter Head</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Language__c</columns>
        <columns>Brand__c</columns>
        <columns>Header_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Brand__c</field>
            <operation>contains</operation>
            <value>down</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Letter Head Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Letter Heads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>